projects/restaurants/target/classes/META-INF/fabric8/openshift/resturant-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=resturant&var-version=1.0.0-SNAPSHOT
  labels:
    app: resturant
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat
  name: resturant
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: resturant
    provider: fabric8
    group: com.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=resturant&var-version=1.0.0-SNAPSHOT
      labels:
        app: resturant
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.redhat
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: redhat/resturant:snapshot-180423-101450-0634
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
