projects/restaurants/target/classes/META-INF/fabric8/openshift/resturant-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: resturant
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.redhat
  name: resturant
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: resturant
